# AI-NativeServerOS

./: CLAUDE.md  README.md  __init__.py  __main__.py  cli.py  docker-compose.yml  pipeline.py  pyproject.toml  test_host.py  test_loop.py
executor/: code_gen.py  host.py  remote.py  sandbox.py  self_heal.py
executor/templates/: check_status.sh.j2  edit_file.sh.j2  install_package.sh.j2  restart_service.sh.j2  run_command.sh.j2
feedback/: nl_report.py  redis_streams.py
hub/: a2alawd.service  daemon.py  hub.yaml
mesh/: council.py  healer.py  heartbeat.py  peer.py
orchestrator/: agent.py  dag_parser.py  nl_parser.py  risk_scorer.py
safety/: git_audit.py  opa_client.py  seccomp.json
safety/opa_policies/: base.rego
schemas/: intent.json  skill.json  streams.json
skills/builtin/check_status/: __init__.py
skills/builtin/edit_file/: __init__.py
skills/builtin/install_package/: __init__.py
skills/builtin/restart_service/: __init__.py
skills/builtin/run_command/: __init__.py
system/: claw-skill.sh  openclaw-logrotate.conf  openclaw-rollback.sh  openclaw-systemize.sh  openclaw-update.sh  openclaw.service  spawn-skill.sh
tui/: dialog.py
update/: rollback.sh  update.sh
